tests/snapshots/run_wpt_conformance__onnx_reshape__squeeze__float32_4D_tensor_by_eliminating_two_dimensions.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reshape.https.any.js",
    "reshape (squeeze) float32 4D tensor by eliminating two dimensions",
    "onnx",
    "PASS",
)
