tests/snapshots/run_wpt_conformance__onnx_reshape__squeeze__float32_5D_tensor_by_eliminating_2nd_and_3rd_dimensions.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reshape.https.any.js",
    "reshape (squeeze) float32 5D tensor by eliminating 2nd and 3rd dimensions",
    "onnx",
    "PASS",
)
